Details
-
Bug
-
Status: Closed (View Workflow)
-
Critical
-
Resolution: Fixed
-
10.3(EOL), 10.4(EOL), 10.5(EOL), 10.6(EOL), 10.11, 11.4, 11.8
-
Can result in hang or crash
-
Q4/2025 Server Maintenance
Description
INSTALL PLUGIN spider SONAME 'ha_spider.so'; |
CREATE TABLE t (c INT) PARTITION BY LIST COLUMNS (c) (PARTITION p DEFAULT ENGINE=SPIDER); |
INSERT INTO t VALUES (1); |
DELETE FROM t; |
Leads to:
|
10.7.0 1bc82aaf0a7746c0921a94034aff2d51f0d75cd0 (Debug) |
mysqld: /test/10.7_dbg/sql/handler.h:3542: int handler::ha_rnd_end(): Assertion `inited==RND' failed.
|
|
10.7.0 1bc82aaf0a7746c0921a94034aff2d51f0d75cd0 (Debug) |
Core was generated by `/test/MD040921-mariadb-10.7.0-linux-x86_64-dbg/bin/mysqld --no-defaults --core-'.
|
Program terminated with signal SIGABRT, Aborted.
|
#0 __GI_raise (sig=sig@entry=6) at ../sysdeps/unix/sysv/linux/raise.c:50
|
[Current thread is 1 (Thread 0x14d350062700 (LWP 3952612))]
|
(gdb) bt
|
#0 __GI_raise (sig=sig@entry=6) at ../sysdeps/unix/sysv/linux/raise.c:50
|
#1 0x000014d35281f859 in __GI_abort () at abort.c:79
|
#2 0x000014d35281f729 in __assert_fail_base (fmt=0x14d3529b5588 "%s%s%s:%u: %s%sAssertion `%s' failed.\n%n", assertion=0x55fd4f99a8be "inited==RND", file=0x55fd4f765b05 "/test/10.7_dbg/sql/handler.h", line=3542, function=<optimized out>) at assert.c:92
|
#3 0x000014d352830f36 in __GI___assert_fail (assertion=assertion@entry=0x55fd4f99a8be "inited==RND", file=file@entry=0x55fd4f765b05 "/test/10.7_dbg/sql/handler.h", line=line@entry=3542, function=function@entry=0x55fd4f765b2d "int handler::ha_rnd_end()") at assert.c:101
|
#4 0x000055fd4f0bfeda in handler::ha_rnd_end (this=0x14d30c07c5a0) at /test/10.7_dbg/sql/handler.h:3542
|
#5 ha_partition::direct_delete_rows (this=0x14d30c02fe70, delete_rows_result=<optimized out>) at /test/10.7_dbg/sql/ha_partition.cc:11933
|
#6 0x000055fd4ee0be2b in handler::ha_direct_delete_rows (this=0x14d30c02fe70, delete_rows=delete_rows@entry=0x14d350060578) at /test/10.7_dbg/sql/handler.cc:7729
|
#7 0x000055fd4ea9ef82 in mysql_delete (thd=thd@entry=0x14d30c000db8, table_list=0x14d30c013d40, conds=<optimized out>, order_list=order_list@entry=0x14d30c005c00, limit=18446744073709551615, options=<optimized out>, result=<optimized out>) at /test/10.7_dbg/sql/sql_delete.cc:646
|
#8 0x000055fd4eb01c13 in mysql_execute_command (thd=thd@entry=0x14d30c000db8, is_called_from_prepared_stmt=is_called_from_prepared_stmt@entry=false) at /test/10.7_dbg/sql/sql_limit.h:83
|
#9 0x000055fd4eaebccb in mysql_parse (thd=thd@entry=0x14d30c000db8, rawbuf=<optimized out>, length=<optimized out>, parser_state=parser_state@entry=0x14d350061400) at /test/10.7_dbg/sql/sql_parse.cc:8036
|
#10 0x000055fd4eafa8d0 in dispatch_command (command=command@entry=COM_QUERY, thd=thd@entry=0x14d30c000db8, packet=packet@entry=0x14d30c00b739 "DELETE FROM t", packet_length=packet_length@entry=13, blocking=blocking@entry=true) at /test/10.7_dbg/sql/sql_class.h:1358
|
#11 0x000055fd4eafdcd6 in do_command (thd=0x14d30c000db8, blocking=blocking@entry=true) at /test/10.7_dbg/sql/sql_parse.cc:1404
|
#12 0x000055fd4ec740c8 in do_handle_one_connection (connect=<optimized out>, connect@entry=0x55fd5160a3e8, put_in_cache=put_in_cache@entry=true) at /test/10.7_dbg/sql/sql_connect.cc:1418
|
#13 0x000055fd4ec746cd in handle_one_connection (arg=arg@entry=0x55fd5160a3e8) at /test/10.7_dbg/sql/sql_connect.cc:1312
|
#14 0x000055fd4f0ddade in pfs_spawn_thread (arg=0x55fd515092b8) at /test/10.7_dbg/storage/perfschema/pfs.cc:2201
|
#15 0x000014d352d2e609 in start_thread (arg=<optimized out>) at pthread_create.c:477
|
#16 0x000014d35291c293 in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:95
|
Bug confirmed present in:
MariaDB: 10.4.22 (dbg), 10.5.13 (dbg), 10.6.5 (dbg), 10.7.0 (dbg)
Bug (or feature/syntax) confirmed not present in:
MariaDB: 10.2.41 (dbg), 10.2.41 (opt), 10.3.32 (dbg), 10.3.32 (opt), 10.4.22 (opt), 10.5.13 (opt), 10.6.5 (opt), 10.7.0 (opt)
MySQL: 5.5.62 (dbg), 5.5.62 (opt), 5.6.51 (dbg), 5.6.51 (opt), 5.7.35 (dbg), 5.7.35 (opt), 8.0.26 (dbg), 8.0.26 (opt)
Attachments
Issue Links
- relates to
-
MDEV-32097 Assertion `inited==RND' failed in handler::ha_rnd_end on DELETE from partition spider table with read_only_mode=1
-
- Confirmed
-
-
MDEV-26539 SIGSEGV in spider_check_and_set_trx_isolation and I_P_List_iterator from THD::drop_temporary_table (10.5.3 opt only) on ALTER
-
- Closed
-