MDEV-26540 Assertion `inited==RND' failed in handler::ha_rnd_end on DELETE.

We supposed to run the ha_rnd_end() when rnd_seq is on.
Also the ha_spider::info() should not raise the error in the
mysql_delete.